Add ID tests